--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Personal Portfolio</title>
-  <link rel="stylesheet" href="style.css" />
-  ...
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <title>Riska Kurniasari | Portofolio Pribadi</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Portofolio pribadi Riska Kurniasari, mahasiswa Teknik Informatika yang fokus pada web development, UI/UX, dan teknologi front-end." />
+  <meta name="keywords" content="Riska Kurniasari, Web Developer, Frontend, Portofolio, HTML, CSS, JavaScript, UI/UX, STMIK Mardira Indonesia" />
+  <meta name="author" content="Riska Kurniasari" />
 
+  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
   <div class="container">
+    <header>
       <nav class="sidebar">
-        <h2 class="logo">Kaska</h2>
+        <h1 class="logo">Kaska</h1>
         <ul>
           <li><a href="index.html" class="active">🏠 Home</a></li>
           <li><a href="about.html">👤 About</a></li>
@@ -21,31 +25,34 @@
           <li><a href="contact.html">💬 Contact</a></li>
         </ul>
       
-        <!-- Tambahkan di bawah menu -->
         <div class="sidebar-footer">
           <div class="social-icons">
-            <a href="rkurniasari71@gmail,com" title="Email"><i class="bi bi-envelope-fill"></i></a>
-            <a href="https://www.instagram.com/kaskaa147?igsh=YmljanY5YjA3N2Y3"><i class="bi bi-instagram"></i></a>
-            <a href="https://github.com/RiskaKurniasari"><i class="bi bi-github"></i></a>
+            <a href="mailto:rkurniasari71@gmail.com" title="Email"><i class="bi bi-envelope-fill"></i></a>
+            <a href="https://www.instagram.com/kaskaa147?igsh=YmljanY5YjA3N2Y3" title="Instagram"><i class="bi bi-instagram"></i></a>
+            <a href="https://github.com/RiskaKurniasari" title="GitHub"><i class="bi bi-github"></i></a>
           </div>
           <p>&copy; 2025 Riska Kurniasari</p>
         </div>
       </nav>
+    </header>
 
     <main class="main-content">
       <section class="intro">
-        <h1>Hallo, nama saya <span class="name">Riska Kurniasari</span></h1>
-        <p>"Saya adalah mahasiswa Teknik Informatika semester 6 di STMIK Mardira Indonesia, yang antusias di bidang web development, dengan minat khusus pada pengembangan antarmuka responsif dan pengalaman pengguna yang optimal. Saya terus mengasah keterampilan saya dalam HTML, CSS, JavaScript, dan framework modern untuk membangun solusi digital yang fungsional dan menarik."</p>
+        <h2>Halo, saya <span class="name">Riska Kurniasari</span></h2>
+        <p>Saya adalah mahasiswa Teknik Informatika semester 6 di STMIK Mardira Indonesia, yang antusias di bidang web development. Saya memiliki minat khusus pada pengembangan antarmuka responsif dan pengalaman pengguna yang optimal. Saat ini saya terus mengasah keterampilan dalam HTML, CSS, JavaScript, dan framework modern untuk membangun solusi digital yang fungsional dan menarik.</p>
         <button><a href="about.html" style="text-decoration: none; color: white;">More About Me</a></button> 
       </section>
+
       <div class="profile-photo">
-        <img src="img/foto1.jpeg" alt="Profile Picture" />
+        <img src="img/foto1.jpeg" alt="Foto Profil Riska Kurniasari" />
       </div>
     </main>
 
-    
+    <footer>
+      <!-- Opsional: Tambahkan informasi hak cipta atau link tambahan -->
+    </footer>
   </div>
-  <script src="script.js"></script>
+
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script src="script.js"></script>
 </body>
